@@ -71,7 +71,7 @@ class Solution {
             if (list.size() == 0 || list.get(list.size() - 1) < nums[i]) {
                 list.add(nums[i]);
                 helper(list, i + 1, nums);
-                list.remove(list.size() - 1);
+                list.removeLast();
             }
         }
     }
