@@ -5,16 +5,16 @@ package org.luvx.leetcode.java.medium._90;
  * [90] 子集 II
  */
 
-// @lc code=start
-
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
+// @lc code=start
 class Solution {
     public List<List<Integer>> subsetsWithDup(int[] nums) {
-        List<List<Integer>> result = new ArrayList<>();
         Arrays.sort(nums);
+
+        var result = new ArrayList<List<Integer>>();
         backtrack(result, new ArrayList<>(), nums, 0);
         return result;
     }
@@ -27,7 +27,7 @@ class Solution {
             }
             list.add(nums[i]);
             backtrack(result, list, nums, i + 1);
-            list.remove(list.size() - 1);
+            list.removeLast();
         }
     }
 }
